prep for deployment

--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.1.2"
   }
 }
