--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "authentic-recipes",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://boiling-castle-95970-3d9abd54de8a.herokuapp.com/api/",
+  "proxy": "http://localhost:5050/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "embla-carousel-autoplay": "^8.0.0-rc07",
-    "embla-carousel-react": "^7.0.0-rc07",
+    "embla-carousel-react": "^-rc07",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
