--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "embla-carousel-autoplay": "^8.0.0-rc07",
-    "embla-carousel-react": "^-rc07",
+    "embla-carousel-react": "^7.0.0-rc07",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
