--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5050/",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/carousel": "^6.0.13",
