--- a/client/package.json
+++ b/client/package.json
@@ -5,19 +5,23 @@
   "proxy": "http://localhost:5050/",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/carousel": "^6.0.13",
+    "@mui/material": "^5.14.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "embla-carousel-autoplay": "^8.0.0-rc07",
+    "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.0.0-rc07",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
