--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "embla-carousel-react": "^7.0.0-rc07",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.3",
