--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
     "axios": "^1.4.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.0.0-rc07",
@@ -50,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tsconfig/create-react-app": "^2.0.1",
+    "typescript": "^5.3.2"
   }
 }
